Fix modal spacing margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -611,9 +611,6 @@ img {
         0px 2px 1px 0 rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 72px 24px 24px;
-    gap: 16px;
-    display: flex;
-    flex-direction: column;
     transform: translate(-50%, -50%);
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -659,17 +656,17 @@ img {
 }
 
 .modal-title {
+    margin-bottom: 16px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.02em;
     color:#2e2f42;
-    margin-bottom: 0;
 }
 
 .modal-field-wrap {
-    margin-bottom: 0;
+    margin-bottom: 8px;
 }
 
 .modal-input-wrap {
@@ -715,7 +712,7 @@ img {
 }
 
 .modal-field-wrap-comment {
-    margin-bottom: 0;
+    margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -739,7 +736,7 @@ img {
 }
 
 .modal-field-checkbox {
-    margin-bottom: 0;
+    margin-bottom: 24px;
 }
 
 .modal-checkbox {
